force-app/main/default/objects/Activity/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <label>AE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>