force-app/main/default/objects/Activity/fields/AfterCallTime__c.field-meta.xml
<CustomField>
    <fullName>AfterCallTime__c</fullName>
    <label>AfterCallTime</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>