force-app/main/default/objects/Activity/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <label>인입번호</label>
    <type>Phone</type>
</CustomField>