force-app/main/default/objects/Activity/fields/CallDuration__c.field-meta.xml
<CustomField>
    <fullName>CallDuration__c</fullName>
    <label>CallDuration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>