force-app/main/default/objects/Activity/fields/CCR_Programstage__c.field-meta.xml
<CustomField>
    <fullName>CCR_Programstage__c</fullName>
    <description>Picklist field which is using the global picklist program stage to update the value from case</description>
    <label>Program stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_Programstage</valueSetName>
    </valueSet>
</CustomField>