force-app/main/default/objects/Activity/fields/CCR_TaskID__c.field-meta.xml
<CustomField>
    <fullName>CCR_TaskID__c</fullName>
    <description>unique identifier of each task</description>
    <displayFormat>T-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Task ID</label>
    <type>AutoNumber</type>
</CustomField>