force-app/main/default/objects/Activity/fields/CCR_Verbatim__c.field-meta.xml
<CustomField>
    <fullName>CCR_Verbatim__c</fullName>
    <description>Free Text where agent is detailing the consumer case</description>
    <label>Verbatim</label>
    <type>TextArea</type>
</CustomField>