force-app/main/default/objects/Activity/fields/ConnectedTime__c.field-meta.xml
<CustomField>
    <fullName>ConnectedTime__c</fullName>
    <label>ConnectedTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>