force-app/main/default/objects/Activity/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <label>ConversationId</label>
    <type>TextArea</type>
</CustomField>