force-app/main/default/objects/Activity/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <label>Coupon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>