force-app/main/default/objects/Activity/fields/DisconnectedTime__c.field-meta.xml
<CustomField>
    <fullName>DisconnectedTime__c</fullName>
    <label>DisconnectedTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>