force-app/main/default/objects/Activity/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <label>발신번호</label>
    <type>Phone</type>
</CustomField>