force-app/main/default/objects/Activity/fields/GC_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>GC_Campaign_ID__c</fullName>
    <label>GC Campaign ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>