force-app/main/default/objects/Activity/fields/GC_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>GC_CampaignId__c</fullName>
    <label>GC_CampaignID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>