force-app/main/default/objects/Activity/fields/Gifticon__c.field-meta.xml
<CustomField>
    <fullName>Gifticon__c</fullName>
    <description>Mgm Coupon Gifticon Category. e.g) Starbucks</description>
    <inlineHelpText>Mgm Coupon Gifticon Category. e.g) Starbucks</inlineHelpText>
    <label>Gifticon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>스타벅스 교환권</fullName>
            </value>
            <value>
                <fullName>베스킨라빈스 교환권</fullName>
            </value>
            <value>
                <fullName>CU 모바일 상품권</fullName>
            </value>
            <value>
                <fullName>GS25 모바일 상품권</fullName>
            </value>
            <value>
                <fullName>GS 칼텍스 주유상품권</fullName>
            </value>
            <value>
                <fullName>올리브영</fullName>
            </value>
            <value>
                <fullName>파리바게트</fullName>
            </value>
            <value>
                <fullName>신세계 상품권</fullName>
            </value>
            <value>
                <fullName>도서문화상품권</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>