force-app/main/default/objects/Activity/fields/IVR__c.field-meta.xml
<CustomField>
    <fullName>IVR__c</fullName>
    <label>IVR 메뉴</label>
    <length>30</length>
    <type>Text</type>
</CustomField>