force-app/main/default/objects/Activity/fields/KDCE_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleaning</label>
    <type>Checkbox</type>
</CustomField>