force-app/main/default/objects/Activity/fields/KDCE_COMeter__c.field-meta.xml
<CustomField>
    <fullName>KDCE_COMeter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO Meter</label>
    <type>Checkbox</type>
</CustomField>