force-app/main/default/objects/Activity/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notification 연동</description>
    <label>Notification</label>
    <referenceTo>Notification__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>