force-app/main/default/objects/Activity/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <label>QueueName</label>
    <type>TextArea</type>
</CustomField>