force-app/main/default/objects/Activity/fields/RecordingURL__c.field-meta.xml
<CustomField>
    <fullName>RecordingURL__c</fullName>
    <label>녹취 URL</label>
    <type>Url</type>
</CustomField>